# Custom_NN_Kernels

./: CMakeLists.txt  README.md
cmake/: NNKernelsConfig.cmake.in
src/: CMakeLists.txt
src/core/: Device.cpp  Device.h  Tensor.cpp  Tensor.h
tests/: CMakeLists.txt  test_tensor.cpp
